Second push. App fully implements a working dashboard and internet connectivity check activity.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -24,6 +24,11 @@
         android:title="Settings" />
 
     <item
+        android:id="@+id/nav_connectivity_status"
+        android:icon="@drawable/baseline_wifi_24"
+        android:title="Connectivity"/>
+
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/baseline_exit_to_app_24"
         android:title="Logout" />
