Third push. In addition to quality of life improvements, the app fully implements a ChatGPT chat bot that can display all kinds of information using API calls.

--- a/app/src/main/res/layout/activity_check_internet_and_settings.xml
+++ b/app/src/main/res/layout/activity_check_internet_and_settings.xml
@@ -5,22 +5,23 @@
     android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".CheckInternetAndSettingsActivity"
     tools:ignore="HardcodedText">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
-            android:gravity="center"
-            android:text="Activity Directory"
-            android:textSize="30sp" />
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:text="CHECK CONNECTION" />
+
+    </RelativeLayout>
+
 
     <!-- this the navigation view which draws and shows the navigation drawer -->
     <!-- include the menu created in the menu folder -->
@@ -29,6 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/main_menu" />
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/main_menu"
+        android:fitsSystemWindows="true"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
