--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,14 +14,14 @@
         android:title="Trips"/>
 
     <item
-        android:id="@+id/nav_account"
-        android:icon="@drawable/ic_baseline_person_24"
-        android:title="My Account" />
-
-    <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/baseline_settings_24"
         android:title="Settings" />
+
+    <item
+        android:id="@+id/nav_chatbot"
+        android:icon="@drawable/baseline_chat_24"
+        android:title="Chatbot"/>
 
     <item
         android:id="@+id/nav_logout"
